# sample_media_player

./: CMakeLists.txt  Dockerfile.arch  Dockerfile.debian  Main.qml  README.md  Style.qml  build  main.cpp  mirrorlist  run  sample_player.cpp  sample_player.hpp
